הרוקי, פודינג אורז, כרובית, חיות אוכל

--- a/index.html
+++ b/index.html
@@ -391,6 +391,8 @@ Error message and password prompt
 
 <li>הקליניקה</li>
 
+<li>הרוקי מורקמי</li>
+
 <li>הרקוויאם של פורה</li>
 
 <li>וויקליף ז'אן</li>
@@ -404,6 +406,8 @@ Error message and password prompt
 <li>חומרים</li>
 
 <li>חזרת</li>
+
+<li>חיות אוכל</li>
 
 <li>חלומות שחלמנו</li>
 
@@ -432,6 +436,8 @@ Error message and password prompt
 <li>כורתים עצים</li>
 
 <li>כירולוגיה פסיכודיאגנוסטית</li>
+
+<li>כרובית במחבת</li>
 
 <li>כשאמרו קסטה</li>
 
@@ -568,6 +574,8 @@ Error message and password prompt
 <li>פבלובה</li>
 
 <li>פה</li>
+
+<li>פודינג אורז</li>
 
 <li>פוליטיקאי</li>
 
@@ -8483,7 +8491,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[גואן יין]] [[גואן אופנה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[חיות אוכל]] [[פודינג אורז]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8503,7 +8511,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170618182935667" title="$:/temp/search">
+<div created="20161023184814872" modified="20170621135659698" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8751,7 +8759,7 @@ Error message and password prompt
 
 את הצנוברים הקלויים מפזרים מעל, ואפשר לפזר גם עשבי תיבול קצוצים.</pre>
 </div>
-<div created="20170423214419764" modified="20170507214048471" title="אחות כהן">
+<div created="20170423214419764" modified="20170621124448121" title="אחות כהן">
 <pre>[img[pictures/achot-coen.jpg]]
 
 [[שלום ואהבה|imagine]].
@@ -9112,7 +9120,7 @@ Error message and password prompt
 אם קורה שאני לא אוכלת בבוקר קרואסון כלשהו ושותה קפה, אני כל היום כמו תינוק שפסח על שלב הזחילה, [[המוטוריקה|https://he.wikipedia.org/wiki/%D7%94%D7%9E%D7%A2%D7%A8%D7%9B%D7%AA_%D7%94%D7%9E%D7%95%D7%98%D7%95%D7%A8%D7%99%D7%AA]] שלי משתבשת.
 </pre>
 </div>
-<div created="20170425194155286" modified="20170612161513206" title="בחוות החיות">
+<div created="20170425194155286" modified="20170620150037849" title="בחוות החיות">
 <pre>[img[pictures/bechavat-hachayot.jpg]]
 
 
@@ -9213,20 +9221,20 @@ Error message and password prompt
 כמו כן היא סבורה, שגם המנעד הג'נדריאלי ההולך ומתרחב, קשור לחיים כאן [[בגלות|גלות]].
 </pre>
 </div>
-<div created="20170619141108783" modified="20170619190825691" tags="[[סיפורים אמיתיים]]" title="גואן אופנה">
+<div created="20170619141108783" modified="20170620170700662" tags="[[סיפורים אמיתיים]]" title="גואן אופנה">
 <pre>[img[pictures/guen-inn-mitpara.jpg]]
 
 !!![[גואן יין]]:
 
-אצלינו בקבוצה של [[הסינים]], דואגים שהילדים יקבלו השכלה גבוהה, וירכשו מקצוע יאה. אמי היא תופרת מלומדת וכשרונית. וידיה היו תמיד מלאות בעבודה. כשהייתי בת עשר אבי נפטר לפתע. ונשארנו שתינו. בסוף בית הספר היסודי אמנם רציתי רק ג'ינס, אך היא כעסה, כי מבחינתה רכישת בגדים הייתה מעשה שלא יעשה.
+אצלינו בקבוצה של [[הסינים]], דואגים שהילדים יקבלו השכלה גבוהה, וירכשו מקצוע יאה. אמי היא תופרת מלומדת וכשרונית. וידיה היו תמיד מלאות בעבודה. כשהייתי בת עשר אבי נפטר לפתע. ונשארנו שתינו. בסוף בית הספר היסודי אמנם רציתי רק ג'ינס אמיתי, אך היא כעסה, כי מבחינתה רכישת בגדים הייתה מעשה שלא יעשה ונכנעתי.
 
-היא תפרה לי בגדים יפהפיים. בגיל צעיר כבר ידעתי מה אני רוצה ללבוש - והיא הלכה איתי תמיד, אך בין גיל 13 ל-17 בערך, הייתי מהילדים האלה, שלובשים רק שחור ומלא תכשיטים מכסף, ומכסים את הפנים עם השערות. אימא שלי הייתה הרוגה מזה. היא לא ידעה איך להתמודד עם זה מול השכנות. היא כל-כך התביישה.
+היא תפרה לי בגדים יפהפיים. בגיל צעיר כבר ידעתי מה אני רוצה ללבוש - והיא אפילו תפרה לי ג'ינס, אך בין גיל 13 ל-17 בערך, הייתי מהילדים האלה, שלובשים רק שחור ומלא תכשיטים מכסף, ומכסים את הפנים עם השערות. אימא שלי הייתה הרוגה מזה. היא לא ידעה איך להתמודד עם זה מול השכנות. היא כל-כך התביישה.
 
 אני כמובן גם, בקושי דיברתי איתה, ורק כעסתי ונזפתי בה. טוב קרו עוד כל מיני דברים, כמו שתמיד קורים כל מיני דברים, אך קצת אחרי גיל 17, אני ממש זוכרת את הפייד אאוט הזה של השחור, שפתאום התחילו לרוץ לי הצבעים בראש, וכל הזמן התחברו לי בדים שונים עם דוגמאות שונות בכל מיני גזרות.
 
 התחלתי לתפור, אספתי את השיער, חזרתי לחייך. אימי הייתה מאושרת.
 
-שנתיים אחרי התיכון למדתי עיצוב אופנה באקדמיה, עבדתי בכמה בתי אופנה, ולפני ארבע שנים פתחתי את &quot;גואן אופנה&quot;.
+שנתיים אחרי התיכון למדתי עיצוב אופנה באקדמיה, לאחר שסיימתי את הלימודים עבדתי בכמה בתי אופנה, ולפני ארבע שנים פתחתי את &quot;גואן אופנה&quot;.
 
 אמי מנהלת את העבודה. אנחנו גוזרות יחדיו, ומעסיקות שלוש נשים. 
 
@@ -9507,7 +9515,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20161111215423587" modified="20170608170857091" title="האחיות כהן">
+<div created="20161111215423587" modified="20170620145913541" title="האחיות כהן">
 <pre>[img[pictures/coen-sisters.jpg]]
 
 
@@ -9516,7 +9524,7 @@ Error message and password prompt
 
 שלום רב,
 
-בדצמבר 2015, עשרה ימים לאחר שנכנסנו, גורה דןדן ואני ל[[דירה|הדירה]], ארחנו חברים ל[[ארוחת כריסמס]]. זו הייתה ארוחה פנטסטית א-לה-דובונאז'. אני בעיקר זוכר את עצמי עומד מתנדנד ומבסוט על עצמי בשגעון.
+בדצמבר 2015, עשרה ימים לאחר שנכנסנו, גורה דןדן ואני ל[[דירה|הדירה]], ארחנו חברים ל[[ארוחת כריסמס]]. זו הייתה ארוחה פנטסטית [[א-לה-דובונאז'|חיות אוכל]]. אני בעיקר זוכר את עצמי עומד מתנדנד ומבסוט על עצמי בשגעון.
 
 כדברי פתיחה, אני מעתיק לכאן את הקטע בו אווה מתארת אותי עומד שם ונואם בפני חברי ב[[כוכב המשאלות בעל תשע הצלעות]]:
 
@@ -10225,6 +10233,17 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
+<div created="20170620165423791" modified="20170621220651249" tags="[[אחיות חוץ]]" title="הרוקי מורקמי">
+<pre>[img[pictures/haruki-murakami.jpg]]
+
+!!![[יויו]]:
+
+''&quot;זה כמו ששמים במיקרוגל קערה עם תערובת אינסטנט [[פודינג אורז]] ולוחצים על הכפתור, ומרימים את המכסה כשזה מצלצל – ובקערה יש פודינג אורז מוכן. אבל מה קורה בין הלחיצה על הכפתור ובין הצלצול? אי אפשר לדעת מה קורה מתחת למכסה&quot;''
+&quot;קורות הציפור המכאנית&quot;, עמודים 429-430, הרוקי מורקמי, זמורה ביתן, 2005.
+
+לא אומר, זה מוריד [[מהרוקי|https://he.wikipedia.org/wiki/%D7%94%D7%A8%D7%95%D7%A7%D7%99_%D7%9E%D7%95%D7%A8%D7%A7%D7%9E%D7%99]] שבאיזשהו גיל הוא נהיה [[סחי|החיים נועדו למי שלא יכול להתמודד עם סמים]] ורץ מרתון שהולך לישון בתשע - בכל זאת אני אוהב אותו בלב, כמו שאני אוהב את [[ג'ון|ג'ון אירווינג]], אבל אחרת.
+</pre>
+</div>
 <div created="20161221191920525" modified="20170603145138963" tags="[[אירי טוענת]]" title="הרקוויאם של פורה">
 <pre>[img[pictures/requiem-faure.jpg]]
 
@@ -10352,6 +10371,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * מתבלים ומערבבים
 * שומרים במקרר בצנצנת סגורה</pre>
 </div>
+<div created="20170620145929305" modified="20170620193527189" title="חיות אוכל">
+<pre>[img[pictures/chayot-ochel.jpg]]
+
+''מתכונים מהיום-יום''
+
+
+&lt;&lt;list-links filter:&quot;[tag[חיות אוכל]]&quot;&gt;&gt;</pre>
+</div>
 <div created="20170422183732891" modified="20170423215513092" title="חלומות שחלמנו">
 <pre>[img[pictures/chalomot-shechalamnoo.jpg]]
 
@@ -10427,14 +10454,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 !!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, יד ימין אינה יודעת, מה יד שמאל עושה. (ולהיפך).</pre>
 </div>
-<div created="20161026214908307" modified="20170608172028446" tags="[[נאמני הגנזך]] [[אחות כהן]] [[משפחת באומן]]" title="יויו">
+<div created="20161026214908307" modified="20170621135654890" tags="[[נאמני הגנזך]] [[אחות כהן]] [[משפחת באומן]]" title="יויו">
 <pre>!!![[אירי]]:
 
 [img[pictures/yoyo.jpg]]
 
 עבורי יויו היה, ראשית כל, האח האהוב של גורה, אותה הכרתי כשהיינו בנות 12.
 
-כעת הוא האלוהים שלי. [[אני מאמינה לו|גבר פריבילגי]], אני מאמינה בו, אני מאמינה למה שהוא מאמין בו, אני מעריצה אותו, אני אוהבת אותו, אני אוהדת אותו, אני מודה לו מידי יום, אני נעזרת בו, אני מקשיבה לו, אני מתה על הטעם שלו ועל הראש שלו - ואני רוצה תמיד להיות סמוכה לשולחן סביבו הוא סועד את לבו המתוק.
+כעת הוא האלוהים שלי. [[אני מאמינה לו|גבר פריבילגי]], אני מאמינה בו, אני מאמינה למה שהוא מאמין בו, אני מעריצה אותו, אני אוהבת אותו, אני אוהדת אותו, אני מודה לו מידי יום, אני נעזרת בו, אני מקשיבה לו, אני [[מתה על הטעם|כרובית במחבת]] שלו ועל הראש שלו - ואני רוצה תמיד להיות סמוכה לשולחן סביבו הוא סועד את לבו המתוק.
 
 
 הוא יכול להתחרפן כשאנשים אומרים: אפיזודה חולפת או ריטואל קבוע. הוא נהיה חולה אם מאחרים. הוא עובד על עצמו. הוא אמר לי אתמול שכדאי שאשים לב לכך, שעם כל המודעות העצמית שלי אני די עסוקה בתחת של עצמי. הוא אמר לנו כמה שבועות לפני ש[[דיוויד בואי]] מת, שלפי black star הוא יודע שהוא הולך למות, וששומעים את זה מכל הבחינות.
@@ -10539,6 +10566,32 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 <pre>[img[pictures/yZiEyakkL0F87eQO.JPG]]
 
 שיטת אבחון פסיכולוגי בעזרת מדע כף היד, שפותחה על ידי [[ד&quot;ר ארנולד הולצמן|http://www.kafyeda.co.il/document/81,53,17.aspx]].</pre>
+</div>
+<div created="20170621135717036" modified="20170621220457219" tags="[[חיות אוכל]]" title="כרובית במחבת">
+<pre>[img[pictures/kruvit-bamachvat.jpg]]
+
+!!![[יויו]]:
+
+השבוע נזכרתי באפשרות הזו, לצלות כרובית בתוך כמות סבירה של שמן זית ושום, ולסחוט מעל לימון. 
+
+*כרובית שלמה.
+*שלוש שיני שום
+*שמן זית
+*מלח ים
+*קורט פלפל שחור גרוס
+*מיץ מרבע-חצי לימון סחוט
+*כף- 3 כפות  טחינה גולמית
+
+1. מבשלים כרובית שלמה בסיר עד שהגזע מתחיל להתרכך, מסננים ונותנים לה להתקרר.
+
+2. מפרקים את הכרובית לפרחים קטנים.
+
+3. מחממים מחבת ברזל על הלהבה הנמוכה, ומוסיפים כרבע כוס שמן זית ושלושה שיני שום פרוסות.
+
+4. צולים את השום, וכשהוא מתחיל להזהיב מוסיפים את פרחי הכרובית וצולים הרבה זמן (יחסית), ומידי פעם מערבבים בעדינות - עד שהכרובית מזהיבה (כ-40 דקות).
+
+5. כשהכרובית צלויה מספיק מעבירים אותה לקערה. סוחטים מעל מיץ מרבע לימון עד חצי לימון, קורט מלח ים, פלפל שחור גרוס ומקשטים עם כף-שלוש כפות טחינה גולמית ומגישים.
+</pre>
 </div>
 <div created="20170512222504639" modified="20170514232358882" tags="פעם" title="כשאמרו קסטה">
 <pre>''
@@ -11607,18 +11660,20 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 האחות הבכורה והביולוגית של גורה ושלי.</pre>
 </div>
-<div created="20170331195529688" modified="20170509210503587" tags="[[אחות כהן]]" title="סוניה">
+<div created="20170331195529688" modified="20170620150556736" tags="[[אחות כהן]]" title="סוניה">
 <pre>[img[pictures/sonya.jpg]]
 
 !!![[גורה]]:
 
 סוניה המהממת היא אישה הונגריה בת חמשים ושש או שבע. היא [[ומרק|מרק]], בעלה, היגרו לפריז כשהיו כבר בני חמשים, בעקבות שני בניהם. 
 
-שניהם דיברו צרפתית, כשפה שניה, מגיל צעיר.
+שניהם דיברו צרפתית כשפה שניה מגיל צעיר.
 
 היא בשלנית מופלאה. על ראשה נישא גולגול ענקי, היא די גבוהה והיא הכי חמודה בעולם.
 
-לארוחת הכריסמס היא הכינה [[צלי בשר עם תפוחי אדמה]], [[פנטונה]], ו-[[ריגו יאנצ'י]].</pre>
+לארוחת הכריסמס היא הכינה [[צלי בשר עם תפוחי אדמה]], [[פנטונה]], ו-[[ריגו יאנצ'י]].
+
+בזמן האחרון התחילו להגיש [[בקוסקוס|הקוסקוס]], [[פודינג אורז]], שסוניה מכינה.</pre>
 </div>
 <div created="20170425213116567" modified="20170501201331135" tags="[[בחוות החיות]]" title="סוסים לדבק">
 <pre>[img[pictures/soosim-ledevek.jpg]]
@@ -12295,6 +12350,38 @@ __אופן ההכנה____
 הוא מסיים תואר שני במחשבים.
 
 יותר מקצרה היריעה מלהכיל מילות התפעמות ממנו ומהחבורה כולה. אירי טוענת כי הוא [[זקוף גו|זקופי הגו]].
+</pre>
+</div>
+<div created="20170620150716805" modified="20170621221635867" tags="[[חיות אוכל]]" title="פודינג אורז">
+<pre>[img[pictures/rice-pudding.jpg]]
+
+!!![[סוניה]]:
+
+זמן טוב [[להכין פודינג אורז|הרוקי מורקמי]], זה אם במילא נמצאים במטבח, ויש להבה קטנה פנויה על הכיריים.
+
+כי את הפודינג אורז כדאי לבחוש בעדינות מידי כמה דקות.
+
+חומרים לשש מנות:
+
+*חצי כוס אורז לריזוטו
+*שלוש כוסות מים
+*שתי כוסות חלב
+*ארבע כפות סוכר
+*שקית סוכר וניל
+*קומץ קינמון טחון
+
+אופן ההכנה:
+
+1. שמים את כל המרכיבים בסיר, אותו מניחים על הלהבה הקטנה, ומבשלים בסיר סגור עד לרתיחה. (וכל כמה דקות לערבב)
+
+2. לאחר הרתיחה מסירים את המכסה מהסיר, ומבשלים שעה נוספת, וממשיכים מידי כמה דקות לערבב. 
+
+3. כאשר מתקבל פודינג סמיך, מסירים אותו מן האש, מערבבים בעדינות שוב,  מחכים כמה דקות, ומוזגים לשש קעריות או שישה ספלים יפים.
+
+4. אפשר לאכול מיד או לעטוף ולקרר במקרר.
+
+5. [[בקוסקוס|הקוסקוס]] אנחנו מגישים את זה קר וכמו שזה, אבל אפשר גם לפזר מעל הפודינג, קוקוס, אגוזים, פירות, רוטב, סירופ - וכל מה שבחשק שלכם.
+
 </pre>
 </div>
 <div created="20170419212629057" modified="20170504140039659" title="פוליטיקאי">
