--- a/index.html
+++ b/index.html
@@ -8491,7 +8491,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[חיות אוכל]] [[פודינג אורז]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[חיות אוכל]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10371,10 +10371,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * מתבלים ומערבבים
 * שומרים במקרר בצנצנת סגורה</pre>
 </div>
-<div created="20170620145929305" modified="20170620193527189" title="חיות אוכל">
-<pre>[img[pictures/chayot-ochel.jpg]]
+<div created="20170620145929305" modified="20170621235310548" title="חיות אוכל">
+<pre>[img[pictures/chayot-ochel.jpg]] 
 
-''מתכונים מהיום-יום''
+''אוכל שאנחנו מכינים ברגיל:''
 
 
 &lt;&lt;list-links filter:&quot;[tag[חיות אוכל]]&quot;&gt;&gt;</pre>
