--- a/index.html
+++ b/index.html
@@ -8491,7 +8491,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[חיות אוכל]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[חיות אוכל]] [[כרובית במחבת]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10567,7 +10567,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 שיטת אבחון פסיכולוגי בעזרת מדע כף היד, שפותחה על ידי [[ד&quot;ר ארנולד הולצמן|http://www.kafyeda.co.il/document/81,53,17.aspx]].</pre>
 </div>
-<div created="20170621135717036" modified="20170621220457219" tags="[[חיות אוכל]]" title="כרובית במחבת">
+<div created="20170621135717036" modified="20170621235846699" tags="[[חיות אוכל]]" title="כרובית במחבת">
 <pre>[img[pictures/kruvit-bamachvat.jpg]]
 
 !!![[יויו]]:
@@ -10590,7 +10590,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 4. צולים את השום, וכשהוא מתחיל להזהיב מוסיפים את פרחי הכרובית וצולים הרבה זמן (יחסית), ומידי פעם מערבבים בעדינות - עד שהכרובית מזהיבה (כ-40 דקות).
 
-5. כשהכרובית צלויה מספיק מעבירים אותה לקערה. סוחטים מעל מיץ מרבע לימון עד חצי לימון, קורט מלח ים, פלפל שחור גרוס ומקשטים עם כף-שלוש כפות טחינה גולמית ומגישים.
+5. כשהכרובית צלויה מספיק מעבירים אותה לקערה. סוחטים מעל מיץ מרבע לימון עד חצי לימון, קורט מלח ים, פלפל שחור גרוס, מקשטים עם כף-שלוש כפות טחינה גולמית ומגישים.
 </pre>
 </div>
 <div created="20170512222504639" modified="20170514232358882" tags="פעם" title="כשאמרו קסטה">
@@ -12352,7 +12352,7 @@ __אופן ההכנה____
 יותר מקצרה היריעה מלהכיל מילות התפעמות ממנו ומהחבורה כולה. אירי טוענת כי הוא [[זקוף גו|זקופי הגו]].
 </pre>
 </div>
-<div created="20170620150716805" modified="20170621221635867" tags="[[חיות אוכל]]" title="פודינג אורז">
+<div created="20170620150716805" modified="20170622000201944" tags="[[חיות אוכל]]" title="פודינג אורז">
 <pre>[img[pictures/rice-pudding.jpg]]
 
 !!![[סוניה]]:
@@ -12372,15 +12372,15 @@ __אופן ההכנה____
 
 אופן ההכנה:
 
-1. שמים את כל המרכיבים בסיר, אותו מניחים על הלהבה הקטנה, ומבשלים בסיר סגור עד לרתיחה. (וכל כמה דקות לערבב)
+1. שמים את כל המרכיבים בסיר, אותו מניחים על הלהבה הקטנה. מכסים את הסיר עד לרתיחה. (מערבבים כל כמה דקות)
 
-2. לאחר הרתיחה מסירים את המכסה מהסיר, ומבשלים שעה נוספת, וממשיכים מידי כמה דקות לערבב. 
+2. לאחר הרתיחה מסירים את המכסה מהסיר, ומבשלים שעה נוספת. ממשיכים מידי כמה דקות לערבב בעדינות. 
 
 3. כאשר מתקבל פודינג סמיך, מסירים אותו מן האש, מערבבים בעדינות שוב,  מחכים כמה דקות, ומוזגים לשש קעריות או שישה ספלים יפים.
 
 4. אפשר לאכול מיד או לעטוף ולקרר במקרר.
 
-5. [[בקוסקוס|הקוסקוס]] אנחנו מגישים את זה קר וכמו שזה, אבל אפשר גם לפזר מעל הפודינג, קוקוס, אגוזים, פירות, רוטב, סירופ - וכל מה שבחשק שלכם.
+5. [[בקוסקוס|הקוסקוס]] אנחנו מגישים את זה קר וכמו שזה, אבל אפשר גם לפזר מעל הפודינג, קוקוס, אגוזים, פירות, רוטב, סירופ...
 
 </pre>
 </div>
