--- a/index.html
+++ b/index.html
@@ -639,6 +639,8 @@ Error message and password prompt
 
 <li>שלח</li>
 
+<li>שניצל</li>
+
 <li>שעועית ירוקה בחמאה ושום</li>
 
 <li>שרלה הייתה אוהבת את זה</li>
@@ -8491,7 +8493,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[חיות אוכל]] [[כרובית במחבת]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[ילדים חד הוריים]] בבוקר הסינים [[גואן יין]] [[בחוות החיות]] סוניה [[גואן אופנה]] [[אחות כהן]] יויו [[כרובית במחבת]] [[פודינג אורז]] שניצל [[הרוקי מורקמי]] [[חיות אוכל]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8511,7 +8513,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170621135659698" title="$:/temp/search">
+<div created="20161023184814872" modified="20170622222037126" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9827,7 +9829,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 ([[cc|https://creativecommons.org/licenses/by-nc-sa/2.0/]]) [[Timo Heuer|https://www.flickr.com/photos/upim/3363312260]]
 @@</pre>
 </div>
-<div created="20161218221618167" modified="20170528151336076" title="המשק האוטרקי שלנו">
+<div created="20161218221618167" modified="20170622203353434" title="המשק האוטרקי שלנו">
 <pre>[img[pictures/hameshek-shelanoo.jpg]]
 
 !!![[אלפרד]]:
@@ -9836,7 +9838,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 שנינו יודעים, שגם עם [[אחותי|דפני אברואה]] תתחרבן לגמרי, יש לנו גב, שהופך אותנו לחלק ממשק אוטרקי חברתית, אנושית, נפשית. 
 
-ואלה, לפני שמניתי, את היכולת לשפץ דירות, לשפץ רהיטים, לבשל, לאפות,יש לנו את המסעדה, יש לנו מטפלים בכמה אלטרנטיבות ועד כדי כדורים פסיכיאטריים.יש לנו פובליציסט, יש לנו עורך סאונד, אנחנו יודעים לערוך וידאו, יש לנו כותבות, ותמיד יש צנצנת עם דובוני גומי.
+ואלה, לפני שמניתי, את היכולת לשפץ דירות, לשפץ רהיטים, [[לבשל|שניצל]], לאפות,יש לנו את המסעדה, יש לנו מטפלים בכמה אלטרנטיבות ועד כדי כדורים פסיכיאטריים.יש לנו פובליציסט, יש לנו עורך סאונד, אנחנו יודעים לערוך וידאו, יש לנו כותבות, ותמיד יש צנצנת עם דובוני גומי.
 
 
 </pre>
@@ -10233,15 +10235,17 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170620165423791" modified="20170621220651249" tags="[[אחיות חוץ]]" title="הרוקי מורקמי">
+<div created="20170620165423791" modified="20170622223924555" tags="[[אחיות חוץ]]" title="הרוקי מורקמי">
 <pre>[img[pictures/haruki-murakami.jpg]]
 
 !!![[יויו]]:
 
-''&quot;זה כמו ששמים במיקרוגל קערה עם תערובת אינסטנט [[פודינג אורז]] ולוחצים על הכפתור, ומרימים את המכסה כשזה מצלצל – ובקערה יש פודינג אורז מוכן. אבל מה קורה בין הלחיצה על הכפתור ובין הצלצול? אי אפשר לדעת מה קורה מתחת למכסה&quot;''
-&quot;קורות הציפור המכאנית&quot;, עמודים 429-430, הרוקי מורקמי, זמורה ביתן, 2005.
+את הדברים הבאים כותבת מאי קסהארה, דמות שאני מאד אוהב, נערה שמזכירה את [[הולדן קולפילד|https://he.wikipedia.org/wiki/%D7%94%D7%AA%D7%A4%D7%A1%D7%9F_%D7%91%D7%A9%D7%93%D7%94_%D7%94%D7%A9%D7%99%D7%A4%D7%95%D7%9F]]:
 
-לא אומר, זה מוריד [[מהרוקי|https://he.wikipedia.org/wiki/%D7%94%D7%A8%D7%95%D7%A7%D7%99_%D7%9E%D7%95%D7%A8%D7%A7%D7%9E%D7%99]] שבאיזשהו גיל הוא נהיה [[סחי|החיים נועדו למי שלא יכול להתמודד עם סמים]] ורץ מרתון שהולך לישון בתשע - בכל זאת אני אוהב אותו בלב, כמו שאני אוהב את [[ג'ון|ג'ון אירווינג]], אבל אחרת.
+''&quot;נראה לי שרוב האנשים (בטח יש כמה יוצאי דופן) חושבים שהעולם (או החיים, או מה שלא יהיה) הוא מקום שבו הכל הגיוני ועקבי (או אמור להיות כזה). השיחות שלי עם השכנות שלי כאן גורמות לי לחשוב ככה. כשמשהו קורה - לא חשוב אם זה ארוע גדול שמשפיע על כל החברה או משהו קטן ואישי - אנשים מדברים על זה ואומרים, &quot;נו טוב, בטח, זה קרה בגלל זה וזה,&quot; וברוב המקרים מי ששומע את זה מסכים ואומר, &quot;אה, בטח, אני מבין.&quot; אבל אני פשוט לא קולטת את זה. &quot;א' הוא ככה וככה ולכן קרה ב'&quot;. הרי זה לא מסביר שום דבר. זה כמו ששמים במיקרוגל קערה עם תערובת אינסטנט [[פודינג אורז]] ולוחצים על הכפתור, ומרימים את המכסה כשזה מצלצל – ובקערה יש פודינג אורז מוכן. אבל מה קורה בין הלחיצה על הכפתור ובין הצלצול? אי אפשר לדעת מה קורה מתחת למכסה. אולי בחשכה, כשאף אחד לא מסתכל, האינסטנט פודינג הופך למקרוני מוקרם ורק אחר כך לפודינג אורז. בגלל זה נראה לנו טבעי לקבל פודינג אורז אחרי שאנחנו שמים תערובת אינסטנט פודינג אורז במיקרו והפעמון מצלצל, אבל בעיני זו רק השערה. לי זו תהיה הקלה לגלות שלפעמים אחרי ששמים תערובת פודינג במיקרו והוא מצלצל פותחים את המכסה ומוצאים שם מקרוני מוקרם. אני מתארת לי שאחטוף מזה הלם, כמובן, אבל ודאי ארגיש גם הקלה מסוימת. בכל אופן אני מאמינה שלא אהיה כל כך מוטרדת מזה, כי התחושה שלי תהיה שזה איכשהו הרבה יותר מציאותי.&quot;''
+&quot;קורות הציפור המכאנית&quot;, עמודים 429-430, [[הרוקי מורקמי|https://he.wikipedia.org/wiki/%D7%94%D7%A8%D7%95%D7%A7%D7%99_%D7%9E%D7%95%D7%A8%D7%A7%D7%9E%D7%99]], זמורה ביתן, 2005.
+
+
 </pre>
 </div>
 <div created="20161221191920525" modified="20170603145138963" tags="[[אירי טוענת]]" title="הרקוויאם של פורה">
@@ -12352,14 +12356,14 @@ __אופן ההכנה____
 יותר מקצרה היריעה מלהכיל מילות התפעמות ממנו ומהחבורה כולה. אירי טוענת כי הוא [[זקוף גו|זקופי הגו]].
 </pre>
 </div>
-<div created="20170620150716805" modified="20170622000201944" tags="[[חיות אוכל]]" title="פודינג אורז">
+<div created="20170620150716805" modified="20170622202551900" tags="[[חיות אוכל]]" title="פודינג אורז">
 <pre>[img[pictures/rice-pudding.jpg]]
 
 !!![[סוניה]]:
 
 זמן טוב [[להכין פודינג אורז|הרוקי מורקמי]], זה אם במילא נמצאים במטבח, ויש להבה קטנה פנויה על הכיריים.
 
-כי את הפודינג אורז כדאי לבחוש בעדינות מידי כמה דקות.
+כי את הפודינג אורז צריך לבחוש בעדינות מידי כמה דקות.
 
 חומרים לשש מנות:
 
@@ -13075,6 +13079,29 @@ Fapina''
 <pre>[img[pictures/CT2ku66Mqk7cBavl.JPG]]
 ''
 הכל ייתברר''</pre>
+</div>
+<div created="20170622203416653" modified="20170622224229653" tags="[[חיות אוכל]]" title="שניצל">
+<pre>[img[pictures/schnitzel.jpg]]
+
+!!![[יויו]]:
+
+החוקים המקובלים להכנת שניצל אומרים, שמצפים אותו בקמח, ביצה טרופה ופרורי לחם. אני פוסח על הקמח. ולביצה אני מוסיף חרדל. כמו כן אומרים לטגן בשמן עמוק טיגון מהיר. אני מטגן בשכבת שומן דקה בטיגון איטי.
+
+כך אני עושה:
+
+1. קונים אצל הקצב פרוסות דקות של בשר לשניצל - זו בדרך כלל איזו חתיכה אחורית של עגל.
+
+2. כשמגיעים הביתה טורפים ביצים (בהתאם לכמות הבשר, לקילו בשר שלוש ביצים) עם כפית חרדל, ומכניסים פנימה את פרוסות הבשר, תוך כדי שעוטפים אותן עם הבלילה.
+
+3. מניחים במקררלכמה שעות - אפשר גם ליממה.
+
+4. מוציאים את השניצלים מהמקרר, מסננים מהביצים ומצפים אותם בפרורי לחם כמו שצריך.
+
+5. מחממים מחבת ברזל על הלהבה הנמוכה, וכשהיא כבר חמה מניחים בתוכה: [[חמאת שום|חמאת שום ועשבי תיבול]]/שמן זית/חמאה - כשליש כוס.
+
+6. מניחים את פרוסות השניצלים במחבת ומתחילים לצלות. בהתחלה על החום הגבוה יותר של הלהבה הנמוכה, וכעבור דקה שתיים מנמיכים, וממשיכים לצלות כמה דקות נוספות.
+
+7. הופכים את השניצלים, מוסיפים שומן אם צריך, וממשיכים בצליה - ככה - עשרים דקות עד חצי שעה. אפשר לשחק עם הלהבה. לא מוסיפים עוד ועוד שומן, כי אם לפי הצורך.</pre>
 </div>
 <div created="20170406190136484" modified="20170407122332880" tags="[[מתכוני ארוחת הכריסמס]]" title="שעועית ירוקה בחמאה ושום">
 <pre>[img[pictures/sheooit.jpg]]
