עוגיות לימון, לס איז מור, טורט, כשאתם ישנים, תיקונים ועוד

--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@ DAMAGE.
 <title>גנזך האחיות כהן — געזונט הייטס, קומה מינוס 1, אצל סטלין</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~--><!--~~ Raw markup ~~-->
 <link rel="alternate" type="application/rss+xml" title="האחיות כהן" href="rss.xml">
+<meta property="og:title" content="גנזך האחיות כהן"/>
+<meta property="og:type" content="website"/>
+<meta property="og:url" content="http://coensisters.org/"/>
+<meta property="og:image" content="http://coensisters.org/pictures/logo.png"/>
+<meta property="og:description" content="געזונט הייטס, קומה מינוס 1, אצל סטלין"/>
+<meta name="twitter:card" content="summary"/>
+<meta name="twitter:title" content="גנזך האחיות כהן"/>
+<meta name="twitter:description" content="געזונט הייטס, קומה מינוס 1, אצל סטלין"/>
+<meta name="twitter:image" content="http://coensisters.org/pictures/logo.png"/>
+<meta name="twitter:url" content="http://coensisters.org/"/>
 </head>
 <body class="tc-body">
 <!--~~ Static styles ~~-->
@@ -291,6 +301,8 @@ Error message and password prompt
 
 <li>בחוות החיות</li>
 
+<li>ביורק</li>
+
 <li>בית האננס ההוואי של אירי</li>
 
 <li>ג'וזף אברואה</li>
@@ -419,6 +431,8 @@ Error message and password prompt
 
 <li>טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן</li>
 
+<li>טורט</li>
+
 <li>יד ימין אינה יודעת</li>
 
 <li>יויו</li>
@@ -448,6 +462,8 @@ Error message and password prompt
 <li>כשהיו כבישים צרים וארוכים</li>
 
 <li>כשהיו מעט מכוניות</li>
+
+<li>כשהם ישנים</li>
 
 <li>לוקוס בתנור</li>
 
@@ -546,6 +562,8 @@ Error message and password prompt
 <li>סלק מבושל</li>
 
 <li>ספירל</li>
+
+<li>עוגיות חמאה ולימון</li>
 
 <li>עוגיות קימל</li>
 
@@ -666,6 +684,8 @@ Error message and password prompt
 <li>HH</li>
 
 <li>imagine</li>
+
+<li>less is more</li>
 
 <li>logo-bg</li>
 
@@ -8481,10 +8501,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20170607195419902" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/System</pre>
+<div created="20161023184709475" modified="20170627160348539" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20161023184705203" modified="20170607204408543" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20170627160548785" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8493,7 +8513,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[ילדים חד הוריים]] בבוקר הסינים [[גואן יין]] [[בחוות החיות]] סוניה [[גואן אופנה]] [[אחות כהן]] יויו [[כרובית במחבת]] [[פודינג אורז]] שניצל [[הרוקי מורקמי]] [[חיות אוכל]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[עוגיות חמאה ולימון]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8513,7 +8533,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170622222037126" title="$:/temp/search">
+<div created="20161023184814872" modified="20170627153002278" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8714,7 +8734,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20161215192348716" modified="20170507200143236" tags="[[אחות כהן]]" title="אווה כהן">
+<div created="20161215192348716" modified="20170624192405259" tags="[[אחות כהן]]" title="אווה כהן">
 <pre>[img[pictures/7h68QEIPyKEHEZ8B.jpg]]
 
 
@@ -8730,7 +8750,7 @@ Error message and password prompt
 
 קצרה היריעה מלספר על אווה, מה גם שהיא עצמה כתבה לא מעט בגנזך.
 
-לאחרונה אירי, אווה ואני עובדות יחד על [[אימא, סבתא ואני]], סיפורים מאת דנה הבובה, על חייה עם איריס, ביתה של אווה ואווה.</pre>
+לאחרונה אירי, אווה ואני עובדות יחד על [[אימא, סבתא ואני]], סיפורים מאת דנה הבובה, על [[חייה עם איריס|כשהם ישנים]], ביתה של אווה ואווה.</pre>
 </div>
 <div created="20170422193053700" modified="20170422202723586" tags="[[חלומות שחלמנו]]" title="אוטו מטריה">
 <pre>[img[pictures/oto-mitriya.jpg]]
@@ -9114,12 +9134,12 @@ Error message and password prompt
 
 נאדיה היא אשת עסקים מזן ה-K. היא נראית מבוגרת, ומתלבשת מבוגר וחום (פוליאסטר וטרילין), מתהדרת ביושר, בידע והבנת העולם. נשואה ובוגדנית.</pre>
 </div>
-<div created="20170618162529875" modified="20170618180610681" tags="[[המטבח על פי ז'נבייב]]" title="בבוקר">
+<div created="20170618162529875" modified="20170625163038313" tags="[[המטבח על פי ז'נבייב]]" title="בבוקר">
 <pre>[img[pictures/genevieve-aruchat-boker.jpg]]
 
 !!![[ז'נבייב]]:
 
-אם קורה שאני לא אוכלת בבוקר קרואסון כלשהו ושותה קפה, אני כל היום כמו תינוק שפסח על שלב הזחילה, [[המוטוריקה|https://he.wikipedia.org/wiki/%D7%94%D7%9E%D7%A2%D7%A8%D7%9B%D7%AA_%D7%94%D7%9E%D7%95%D7%98%D7%95%D7%A8%D7%99%D7%AA]] שלי משתבשת.
+אם קורה שאני לא אוכלת בבוקר [[קרואסון|טורט]] כלשהו ושותה קפה, אני כל היום כמו תינוק שפסח על שלב הזחילה, [[המוטוריקה|https://he.wikipedia.org/wiki/%D7%94%D7%9E%D7%A2%D7%A8%D7%9B%D7%AA_%D7%94%D7%9E%D7%95%D7%98%D7%95%D7%A8%D7%99%D7%AA]] שלי משתבשת.
 </pre>
 </div>
 <div created="20170425194155286" modified="20170620150037849" title="בחוות החיות">
@@ -9136,6 +9156,30 @@ Error message and password prompt
 
 
 
+
+
+</pre>
+</div>
+<div created="20170623150317093" modified="20170623163412323" tags="[[אחיות חוץ]]" title="ביורק">
+<pre>[img[pictures/bjork.jpg]]
+
+!!![[ראשל]]:
+
+[[ביורק|https://he.wikipedia.org/wiki/%D7%91%D7%99%D7%95%D7%A8%D7%A7]] היא ממש מגניבה מכל כך הרבה בחינות. את [[האלבום הזה|https://www.youtube.com/watch?v=1iW8hvcIAJQ]], גורה מאד אוהבת.
+
+אני בחרתי לשים כאן עכשיו את [[זה|https://www.youtube.com/watch?v=3ahhieWx7vc]]. אוהבת את השיר ואוהבת את [[הוידאו|מישל גונדרי]].
+
+
+Emotional landscapes
+They puzzle me
+Confuse
+Can the riddle get solved?
+And you push me up to this...
+
+State of emergency
+How beautiful to be!
+State of emergency
+Is where I want to be
 
 
 </pre>
@@ -9702,7 +9746,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 ובזאת תמו דברינו לערב זה.
 </pre>
 </div>
-<div created="20170325162001136" modified="20170606172312066" title="הכתיבה">
+<div created="20170325162001136" modified="20170624104351649" tags="[[סיפורים אמיתיים]]" title="הכתיבה">
 <pre>[img[pictures/dAslRkCtpSF1J4AA.jpg]]
 
 !!![[גורה]]:
@@ -9711,7 +9755,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 עד אליו השתדלתי לכתוב סיפורים מסודרים.
 
-היה צריך [[שדןדן יסע|דןדן נסע]], כדי שאשב ואתעל את דכאוני ועצבוני וכעסיי, שבכל מקרה כבר יש מהם בתוכי די והותר.
+היה צריך [[שדןדן יסע|דןדן נסע]], כדי שאשב ואתעל את דכאוני ועצבוני וכעסיי, שבכל מקרה כבר יש מהם בתוכי די והותר. הדבר הכי נחמד שקרה מכל זה, הוא, שבגלל שאני תמיד הייתי ועדת קישוט של הדירה, ומאחר שלא התחשק לי לכתוב זכויות יוצרים, התחלתי לעטר.
 
 ציירתי את מכונת הכביסה והמייבש, כי אחד הדברים שהכי הרגיעו את דןדן היה להפעיל אותם.
 
@@ -10375,7 +10419,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * מתבלים ומערבבים
 * שומרים במקרר בצנצנת סגורה</pre>
 </div>
-<div created="20170620145929305" modified="20170621235310548" title="חיות אוכל">
+<div created="20170620145929305" modified="20170624105056833" title="חיות אוכל">
 <pre>[img[pictures/chayot-ochel.jpg]] 
 
 ''אוכל שאנחנו מכינים ברגיל:''
@@ -10452,6 +10496,49 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * קולים פרוסות לחם בתנור עד לגוון הרצוי.
 * מרכיבים את הטוסט: מניחים פרוסה קלויה, מעליה מורחים טחינה גולמית, מעליה רסק עגבניות, מעל מניחים ירקות קלויים, גוררים פרמז'ן וזה מוכן.</pre>
 </div>
+<div created="20170624105143385" modified="20170626184453690" tags="[[חיות אוכל]] [[כשהם ישנים]]" title="טורט">
+<pre>[img[pictures/tort.jpg]]
+
+!!![[אווה]]:
+
+גם אני כמו ז'נבייב, [[מוכרחה מאפה בבוקר|בבוקר]], ובימים בהם אני לא יוצאת בבוקר מהבית ואין כלום, אני מכינה טורט.
+
+את המתכון הבסיסי קיבלתי [[מנורמה|סיפורים שסיפרתי לנורמה]]. 
+
+החומרים:
+
+*ארבע ביצים
+*כוס סוכר
+*3/4  כוס מיץ תפוזים
+*1/2 כוס שמן
+*שקיק סוכר וניל
+*2 כוסות קמח מנופה
+*כפית אבקת אפייה
+
+אופן ההכנה:
+
+1. בקערת המערבל החשמלי, מערבלים חמש-עשר דקות את הביצים עם הסוכר וסוכר הוניל, עד שמתקבלת קציפה תפוחה, בהירה ויציבה.
+
+2. מנמיכים את מהירות המערבל ומוסיפים לאט את השמן ומיץ התפוזים עד שהתערובת אחידה.
+
+3. מכבים את המערבל, ובעזרת מטרפה ידנית טורפים בעדינות לתוך תערובת הביצים, את הקמח ואבקת האפייה עד שהכל אחיד ורך.
+
+4. מוזגים את התערובת לשתי תבניות אנגלישקייק סטנדרטיות או לאחת גדולה - או לתבנית עגולה בגודל 26.
+
+5. אופים בתנור שחומם מראש ל 170 מעלות 40-50 דקות.
+
+6. בודקים עם קיסם או סכין חדה אם העוגה מוכנה.
+
+7. מוציאים מהתנור, ובעדינות בעזרת כף, מוזגים מעל העוגות החמות (מגובה נמוך) חצי כוס מיץ תפוזים. 
+
+
+********
+לפעמים אני משנה קצת. למשל מפחיתה חצי כוס קמח, ובמקומה שמה חצי כוס קוקוס, ומוסיפה לתערובת גם חופן שוקולד צ'יפס. 
+ 
+הבוקר שמתי קצת יותר מידי פקאנים (זה היה סוף הקופסה, אז השתמשתי בכל מה שהיה, וזה היה קצת יותר ממה שצריך). את הפקאנים ערבבתי עם מעט סוכר וקנמון טחון אותם בחשתי בקלות פנימה. אחרי האפיה במקום להרטיב עם מיץ תפוזים השתמשתי בחמש כפות סירופ מייפל.
+
+</pre>
+</div>
 <div created="20170514194133105" modified="20170514223402769" tags="[[בחוות החיות]]" title="יד ימין אינה יודעת">
 <pre>[img[pictures/yad-yamin.jpg]]
 
@@ -10495,7 +10582,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170610184436279" modified="20170618122644349" tags="[[סיפורים אמיתיים]]" title="ילדים חד הוריים">
+<div created="20170610184436279" modified="20170623140730442" tags="[[סיפורים אמיתיים]]" title="ילדים חד הוריים">
 <pre>[img[pictures/yeladim-chad.jpg]]
 
 !!![[ראשל]]:
@@ -10523,7 +10610,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 <pre>[img[pictures/tethys-sea.jpg]]
 מאגר גז שכל התפוקה העתידית שלו נמכרה לגורם שמעדיף להישאר בעילום שם תמורת הזכות לפתח את [[מרינה זוטו]] ו[[געזונטהייטס]] בתור נכסי [[דיור מוגז]].</pre>
 </div>
-<div created="20170422205250692" modified="20170508150011367" tags="[[המטבח על פי ז'נבייב]]" title="ירקות קלויים">
+<div created="20170422205250692" modified="20170625163439585" tags="[[המטבח על פי ז'נבייב]]" title="ירקות קלויים">
 <pre>[img[pictures/yerakot-klooim.jpg]]
 
 !!![[ז'נבייב]]:
@@ -10534,13 +10621,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 ירקות קלויים בתנור זה לא מלכלך.
 
-בטטות, תפוי אדמה, סלק, שומר, קולורבי, בצל - פורסים, מתבלים בשמן זית ומלח גס, עשבי תיבול, שום
+בטטות, תפוחי אדמה, סלק, שומר, קולורבי, בצל - פורסים, מתבלים בשמן זית ומלח גס, עשבי תיבול, שום
 
 אופים בהתחלה בחום בינוני נמוך, וכעבור שעה מעלה ל-200 מעלות, עד שהם בצבע הנכון לטעמינו.
 
 חציל ופלפל - אפשר לאפות שלמים ולטפל בהם לאחר שנאפו היטב.
 
-מהחציל המוכן מוציאים את הבשר לקערה, ומתבלים בשמן זית, מלח ים גס ופלפל שחור גרוס.
+מהחציל המוכן מוציאים את הבשר לקערה, ומתבלים בשמן זית, שן שום כתושה, מלח ים גס ופלפל שחור גרוס.
 
 לאחר שהפלפל התקרר, מסננים את הנוזל שבתוכו, מסירים את הקליפה והגרעינים, ומסדרים על צלחת, מערבבים את המיץ המסונן עם שמן זית, יוצקים את הנוזל מעל, ומפזרים מלח  גס.
 
@@ -10627,6 +10714,25 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 [img[pictures/lesachek-bacvish.jpg]]
 
 </pre>
+</div>
+<div created="20170624104950750" modified="20170625134148044" title="כשהם ישנים">
+<pre>[img[pictures/kesheatem-yeshenim.jpg]]
+
+!!![[אווה]]:
+
+בשנה האחרונה רציתי רק פשוט לחיות. אחרי שפגשתי סוף סוף את פיליפ, וסיימתי לכתוב את [[כוכב המשאלות|כוכב המשאלות בעל תשע הצלעות]], החיים נהיו שקטים וטובים.
+
+אני מטיילת הרבה בעיר, נמצאת עם [[המתוקים|האחיות כהן]], [[הבנים של פיליפ|אני הפסיכיאטר]] מגיעים לפעמים.
+
+הדבר הנהדר שקרה בזמן האחרון הוא,  [[שאיריס שלי|איריס הבת]] באה לגור כאן, ובסתיו
+ היא תתחיל ללמוד תאטרון.
+ 
+בבקרים החופשיים, כשהם שניהם עוד ישנים ואני כבר ערה, אני מסתובבת בבית, מידי פעם מרחרחת סביבם, מרגישה מאושרת, ועושה כל מיני.
+
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[כשהם ישנים]]&quot;&gt;&gt;</pre>
 </div>
 <div created="20170402165550173" modified="20170404203800222" tags="[[מתכוני ארוחת הכריסמס]]" title="לוקוס בתנור">
 <pre>[img[pictures/dag-matconim.jpg]]
@@ -11392,7 +11498,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170112174310883" modified="20170506164353480" tags="[[המטבח על פי ז'נבייב]]" title="מיזונפלציה">
+<div created="20170112174310883" modified="20170625163607858" tags="[[המטבח על פי ז'נבייב]]" title="מיזונפלציה">
 <pre>[img[pictures/5w7PxVmJQ0wK3AoL.jpg]]
 
 
@@ -11401,7 +11507,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 על פי ז'נבייב, [[מיזונפלציה|https://en.wikipedia.org/wiki/Mise_en_place]] זה ה- א-ב של המטבח. זה [[ונקיון|מנקים היטב]].
 
 
-בבית בו גדלתי לא השתמשו במונח הזה אבל ככה עבדנו. קודם קוראים את המתכון או מקבלים הסברים מפורטים - בעיקר מאחותי [[נדיה]] ולפעמים גם מאימא או מסבתא, מכינים את החומרים, מכינים את מה שמכינים, ומנקים היטב.
+בבית בו גדלתי לא השתמשו במונח הזה אבל ככה עבדנו. קודם קוראים את המתכון או מקבלים הסברים מפורטים - בעיקר מאחותי [[נדיה]] ולפעמים גם [[מאימא|דינה ז&quot;ל]] או מסבתא, מכינים את החומרים, מכינים את מה שמכינים, ומנקים היטב.
 
 &lt;img style=&quot;float:left; max-width:33%; margin: 0.5em&quot; src=&quot;pictures/knives.jpg&quot;&gt;
 לאחרונה שמתי לב, שאני מזנפלץ ומזונפלץ כל הזמן. אני לא מת על שיוף סכינים, אבל תמיד יש לי ספייר מכל דבר. 
@@ -11430,7 +11536,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170614165341450" modified="20170616153550020" tags="[[אחיות חוץ]]" title="מישל גונדרי">
+<div created="20170614165341450" modified="20170623150301814" tags="[[אחיות חוץ]]" title="מישל גונדרי">
 <pre>[img[pictures/michel-gondry.jpg]]
 
 !!![[ראשל]]:
@@ -11439,7 +11545,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 [[אלפרד]] הכיר לי אותו.
 
-ראינו את [[מדעי החלום|http://www.imdb.com/title/tt0354899/]], והתאהבתי. ראיתי אחר כך במשך כמה ימים כל מה השגתי בעזרת [[המקלדת|מקלדת]]. 
+ראינו את [[מדעי החלום|http://www.imdb.com/title/tt0354899/]], והתאהבתי. ראיתי אחר כך במשך כמה ימים כל מה השגתי בעזרת [[המקלדת|מקלדת]], והתאהבתי מאד גם [[בביורק|ביורק]] מכל הצפיות האלה.
 
 
 </pre>
@@ -11841,6 +11947,36 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 מועילה מאד החשיבה [[האלכסנדרונית|שיטת אלכסנדר]], להפחתת נזקי קשיחות הטכניקות הקשוחות.
 
+</pre>
+</div>
+<div created="20170627152813374" modified="20170627153921692" tags="[[כשהם ישנים]]" title="עוגיות חמאה ולימון">
+<pre>[img[pictures/ugiyot-limon.jpg]]
+
+!!![[אווה]]:
+
+החומרים:
+
+* 200 גרם חמאה
+* 3/4 כוס סוכר
+* 2 חלמונים
+* גרד קליפת 2 לימונים
+* 2 כפות מיץ לימון
+* 3כוסות קמח
+* כפית אבקת אפייה
+
+אופן ההכנה:
+
+1.בתוך מעבד מזון בעל להב פלדה מערבבים את החמאה והסוכר עד לקבלת משחה חלקה.   
+
+2. מוסיפים פנימה את יתר החומרים ,ומעבדים עד לקבלת כדור בצק אחיד.
+
+3. עוטפים את הבצק בניילון נצמד, ומקררים חצי שעה לפחות.
+
+4. מרדדים את הבצק לעלה בעובי של ס&quot;מ וחצי, קורצים צורות (אפשר כוכבים ,לבבות וכו'), מסדרים בתבנית מרופדת בנייר אפייה, מפזרים מעל סוכר
+
+5. אופים ב-170 מעלות כ-10-20 דקות (שהאפיות יהיו אפויות אך בהירות)
+
+6. מקררים ושומרים בכלי אטום.
 </pre>
 </div>
 <div created="20170407192128538" modified="20170412203414991" tags="[[מתכוני ארוחת הכריסמס]]" title="עוגיות קימל">
@@ -13080,7 +13216,7 @@ Fapina''
 ''
 הכל ייתברר''</pre>
 </div>
-<div created="20170622203416653" modified="20170622224229653" tags="[[חיות אוכל]]" title="שניצל">
+<div created="20170622203416653" modified="20170623115651789" tags="[[חיות אוכל]]" title="שניצל">
 <pre>[img[pictures/schnitzel.jpg]]
 
 !!![[יויו]]:
@@ -13093,7 +13229,7 @@ Fapina''
 
 2. כשמגיעים הביתה טורפים ביצים (בהתאם לכמות הבשר, לקילו בשר שלוש ביצים) עם כפית חרדל, ומכניסים פנימה את פרוסות הבשר, תוך כדי שעוטפים אותן עם הבלילה.
 
-3. מניחים במקררלכמה שעות - אפשר גם ליממה.
+3. מניחים במקרר לכמה שעות - אפשר גם ליממה.
 
 4. מוציאים את השניצלים מהמקרר, מסננים מהביצים ומצפים אותם בפרורי לחם כמו שצריך.
 
@@ -13344,6 +13480,28 @@ You see it written left to right because it is tagged `LTR` (uppercase).
 !!![[האחיות כהן]]:
 
 [[you may say i'm a dreamer|https://www.youtube.com/watch?v=RwUGSYDKUxU]]</pre>
+</div>
+<div created="20170624105324019" modified="20170627152751564" tags="[[המטבח על פי ז'נבייב]]" title="less is more">
+<pre>[img[pictures/less-is-more.jpg]]
+
+!!![[ז'נבייב]]:
+
+לא פעם, אפשר לשמוע אנשים אומרים:
+
+הוספתי למרק, מלח, פלפל שחור, פלפל לבן, אגוז מוסקט, הל, כוסברה, זרעי חרדל, פטרוזיליה, שמיר, כמון, כורכום, פפריקה חריפה, יין... מה יכול להיות רע?
+
+well,
+
+יכול להיות די רע, האוכל שלכם - אם לא תשימו לב מה מתאים וכמה.
+
+השבוע התארחנו אצל אווה ופיליפ, והייתה שם עוגה, שאווה התביישה שאטעם, &quot;כי שמתי את כל מעט האגוזים שנשארו בקופסה במקום לשים חופן בלבד, וידעתי שזה לא נכון, ועשיתי את זה&quot;, היא התנצלה, וגם הכינה [[עוגיות|עוגיות חמאה ולימון]] ופאי.
+
+[[העוגה|טורט]] לכשעצמה עם הקנמון והמייפל עדיין היתה טעימה ומתוקה במידה, אך נכון, שעבודת לעיסה רבה הייתה כרוכה באכילתה, והאגוזים השתלטו עליה, ובכל זאת אכלתי ממנה עוד.
+
+מה שאני אומרת - אם אתם עומדים מול מה שזה לא יהיה וחוככים בדעתכם, ותוהים, אילו טעמים להוסיף פנימה, או כמות הסוכר או המלח - אז בלי להתבלבל שימו את הפחות - כי פחות זה יותר.
+
+
+</pre>
 </div>
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
