--- a/index.html
+++ b/index.html
@@ -47,16 +47,6 @@ DAMAGE.
 <title>גנזך האחיות כהן — געזונט הייטס, קומה מינוס 1, אצל סטלין</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~--><!--~~ Raw markup ~~-->
 <link rel="alternate" type="application/rss+xml" title="האחיות כהן" href="rss.xml">
-<meta property="og:title" content="גנזך האחיות כהן"/>
-<meta property="og:type" content="website"/>
-<meta property="og:url" content="http://coensisters.org/"/>
-<meta property="og:image" content="http://coensisters.org/pictures/logo.png"/>
-<meta property="og:description" content="געזונט הייטס, קומה מינוס 1, אצל סטלין"/>
-<meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="גנזך האחיות כהן"/>
-<meta name="twitter:description" content="געזונט הייטס, קומה מינוס 1, אצל סטלין"/>
-<meta name="twitter:image" content="http://coensisters.org/pictures/logo.png"/>
-<meta name="twitter:url" content="http://coensisters.org/"/>
 </head>
 <body class="tc-body">
 <!--~~ Static styles ~~-->
@@ -537,6 +527,8 @@ Error message and password prompt
 
 <li>נדיה</li>
 
+<li>סבתא שלנו</li>
+
 <li>סוניה</li>
 
 <li>סוסים לדבק</li>
@@ -577,6 +569,8 @@ Error message and password prompt
 
 <li>עיר בנויה מרחובות</li>
 
+<li>עם הפנים החוצה</li>
+
 <li>עם יויו באמסטרדם</li>
 
 <li>עץ המשפחה של אווה</li>
@@ -586,6 +580,8 @@ Error message and password prompt
 <li>פאי אגסים עם קרם גבינה ושקדים</li>
 
 <li>פאי דובדבנים</li>
+
+<li>פאי נקטרין</li>
 
 <li>פאי פקאן עם קרמל</li>
 
@@ -8513,7 +8509,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[עוגיות חמאה ולימון]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[פאי נקטרין]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8533,7 +8529,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170627153002278" title="$:/temp/search">
+<div created="20161023184814872" modified="20170628144450952" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9330,7 +9326,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20170105170620001" modified="20170604134709940" tags="[[אירי טוענת]]" title="גלות">
+<div created="20170105170620001" modified="20170628144930118" tags="[[אירי טוענת]]" title="גלות">
 <pre>[img[pictures/galoot.jpg]]
 
 
@@ -9340,7 +9336,7 @@ Is where I want to be
 
 הדבר שאני חושבת בעת האחרונה, (זה התחיל   בשנה האחרונה, עם מותו של דיוויד בואי, שמחרתיים תמלא שנה למותו), הוא שבדומה [[לשליחתם בעבר של פושעים לאוסטרליה|https://he.wikipedia.org/wiki/%D7%90%D7%95%D7%A1%D7%98%D7%A8%D7%9C%D7%99%D7%94#.D7.94.D7.99.D7.A1.D7.98.D7.95.D7.A8.D7.99.D7.94]], כך כדור הארץ הוא גלות לנשמות מכוכבים אחרים.
 
-אולי לא רחוק היום בו נוכל ממש להגיע, למה שקרוי בפינו, כוכבי לכת אחרים. כמובן שמנקודת זמן זו, לא נראה, כי אנחנו אלה שנוכל לשנע עצמינו לשם, כי אם אכן יש משהו בדברים הללו אזי, כאן זה אוסטרליה.
+אולי לא רחוק היום בו נוכל ממש להגיע, למה שקרוי בפינו, כוכבי לכת אחרים. כמובן שמנקודת זמן זו, לא נראה, כי אנחנו אלה שנוכל [[לשנע עצמינו לשם|עם הפנים החוצה]], כי אם אכן יש משהו בדברים הללו אזי, כאן זה אוסטרליה.
 
 הרעיון שכאן זו גלות, ברגע גרם לי לחשוב על רעיונות להסברים לשלל דברים, אך אם לתמצת אותם למשפט אחד אזי - ובשאיפה למבט מעצים, כמו שאומרים היום - אולי הגלות הזו כאן, היא [[טקס בגרות כלשהו|גבריאל פורה]], שאולי אחרי שעוברים אותו, אפשר סוף סוף להגיע לכוכב שלך, שזה אולי מה שהבודהיסטים קוראים [[נירוונה|https://he.wikipedia.org/wiki/%D7%A0%D7%99%D7%A8%D7%95%D7%95%D7%90%D7%A0%D7%94]]. 
 
@@ -10715,7 +10711,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170624104950750" modified="20170625134148044" title="כשהם ישנים">
+<div created="20170624104950750" modified="20170629085114423" title="כשהם ישנים">
 <pre>[img[pictures/kesheatem-yeshenim.jpg]]
 
 !!![[אווה]]:
@@ -11498,7 +11494,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170112174310883" modified="20170625163607858" tags="[[המטבח על פי ז'נבייב]]" title="מיזונפלציה">
+<div created="20170112174310883" modified="20170629191131234" tags="[[המטבח על פי ז'נבייב]]" title="מיזונפלציה">
 <pre>[img[pictures/5w7PxVmJQ0wK3AoL.jpg]]
 
 
@@ -11507,7 +11503,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 על פי ז'נבייב, [[מיזונפלציה|https://en.wikipedia.org/wiki/Mise_en_place]] זה ה- א-ב של המטבח. זה [[ונקיון|מנקים היטב]].
 
 
-בבית בו גדלתי לא השתמשו במונח הזה אבל ככה עבדנו. קודם קוראים את המתכון או מקבלים הסברים מפורטים - בעיקר מאחותי [[נדיה]] ולפעמים גם [[מאימא|דינה ז&quot;ל]] או מסבתא, מכינים את החומרים, מכינים את מה שמכינים, ומנקים היטב.
+בבית בו גדלתי לא השתמשו במונח הזה אבל ככה עבדנו. קודם קוראים את המתכון או מקבלים הסברים מפורטים - בעיקר מאחותי [[נדיה]] ולפעמים גם [[מאימא|דינה ז&quot;ל]] או [[מסבתא|סבתא שלנו]], מכינים את החומרים, מכינים את מה שמכינים, ומנקים היטב.
 
 &lt;img style=&quot;float:left; max-width:33%; margin: 0.5em&quot; src=&quot;pictures/knives.jpg&quot;&gt;
 לאחרונה שמתי לב, שאני מזנפלץ ומזונפלץ כל הזמן. אני לא מת על שיוף סכינים, אבל תמיד יש לי ספייר מכל דבר. 
@@ -11769,6 +11765,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 !!![[יויו]]:
 
 האחות הבכורה והביולוגית של גורה ושלי.</pre>
+</div>
+<div created="20170629191152497" modified="20170629210039960" tags="[[משפחת באומן]]" title="סבתא שלנו">
+<pre>[img[pictures/savta-shelanu.jpg]]
+
+!!![[יויו]]:
+
+זו תמיד תישאר תעלומה, למרות שיש אפשרויות לתשובה, אבל זו בהחלט שאלה - איך מאדם שמח, טוב לב וסבלני כמו סבתא יצאה אישה כמו [[אימא שלנו|דינה ז&quot;ל]].
+
+</pre>
 </div>
 <div created="20170331195529688" modified="20170620150556736" tags="[[אחות כהן]]" title="סוניה">
 <pre>[img[pictures/sonya.jpg]]
@@ -12194,6 +12199,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
+<div created="20170628145012336" modified="20170629205936070" tags="[[אירי טוענת]]" title="עם הפנים החוצה">
+<pre>[img[pictures/im-hapanim-hachuza.jpg]]
+
+!!![[אירי]]:
+
+הגעתי למסקנה, שאני צריכה להיות מוכנה לרכב המואר והנחמד, שעשוי לבוא יום אחד, ולאסוף אותי מכאן. הרכב יעצור לידי, הדלת של המושב שליד הנהג, ששם נפשו בכפו, תיפתח, אני אכנס פנימה. אני אביט בנהג, הדלת תיסגר והרכב יתחיל לעלות. אלחץ את ידו תוך שאשמע את הגלגלים נכנסים, אני בטוחה שהוא יהיה חביב מאד. החלונות יסגרו ונמשיך לעלות, וזהו, [[ניסע|https://www.youtube.com/watch?v=7zaBCbXUkeU]]. כעת אני מנסה להעריך כמה זמן אורכת נסיעה כזאת, וחושבת איזה מין תיק אני  מכינה, ואיפה הכי כדאי לי לחכות.
+
+</pre>
+</div>
 <div created="20170601232601606" modified="20170606192626683" tags="[[אחות כהן]] [[נאמני הגנזך]]" title="עם יויו באמסטרדם">
 <pre>[img[pictures/amsterdam-im-yoyo.jpg]]
 
@@ -12400,6 +12414,63 @@ May the lord bless your soul, I love you girl</pre>
 5.לפזר שקדים מולבנים פרוסים
 
 6.לאפות 40 דקות בערך, עד שמזהיב יפה יפה.
+
+
+</pre>
+</div>
+<div created="20170629220725238" modified="20170630135855984" tags="[[כשהם ישנים]]" title="פאי נקטרין">
+<pre>[img[pictures/pie-naktarin.jpg]]
+
+!!![[אווה]]:
+
+
+(נקטרין, אפרסקים, שזיפים)
+
+1.בסיס בצק פריך שקדים
+
+*90 גרם שקדים טחונים
+*150 גרם חמאה
+*6 כפות סוכר
+*4 חלמונים
+*כף מיץ לימון
+* שקיק כוסות קמח
+*כפית אבקת אפייה
+
+2. מלית שקדים:
+
+* 100גרם חמאה
+*100גרם סוכר
+*2 ביצים
+*125 שקדים
+*50 גרם קמח
+*כפית סוכר וניל
+
+
+3. 7 נקטרינות פרוסות לפלחים
+
+4. בצק שטרוייזל:
+
+*200 גרם חמאה
+*200 גרם סוכר
+*250 גרם קמח
+*כפית סוכר וניל
+
+אופן ההכנה:
+
+1. מכינים את בצק מספר 1 באותו האופן שמכינים את הבצק של [[עוגיות הלימון|עוגיות חמאה ולימון]].
+
+2. במעבד מזון מערבבים את כל החומרים לכדי משחה.
+
+
+3., חותכים קילו פרות לפלחים לא גדולים.
+
+4. מכינים את בצק השטרויזל, באותו אופן שמכינים בצק פריך. עוטפים אותו בניילון נצמד, מקפיאים כחצי שעה.
+
+5. מחברים את העוגה - משטחים את הבצק שקדים בתחתית התבנית, מעליו מורחים שכבה של משחת השקדים, מעל מסדרים את הפרות, מעל גוררים בעזרת פומפייה את בצק הפרורים.
+
+6.אופים בתנור שחומם מראש ל 170 מעלות 40-50 דקות, עד שהפאי זהוב.
+
+7. מגישים בטמפרטורת החדר.
 
 
 </pre>
@@ -13481,7 +13552,7 @@ You see it written left to right because it is tagged `LTR` (uppercase).
 
 [[you may say i'm a dreamer|https://www.youtube.com/watch?v=RwUGSYDKUxU]]</pre>
 </div>
-<div created="20170624105324019" modified="20170627152751564" tags="[[המטבח על פי ז'נבייב]]" title="less is more">
+<div created="20170624105324019" modified="20170629220706649" tags="[[המטבח על פי ז'נבייב]]" title="less is more">
 <pre>[img[pictures/less-is-more.jpg]]
 
 !!![[ז'נבייב]]:
@@ -13494,7 +13565,7 @@ well,
 
 יכול להיות די רע, האוכל שלכם - אם לא תשימו לב מה מתאים וכמה.
 
-השבוע התארחנו אצל אווה ופיליפ, והייתה שם עוגה, שאווה התביישה שאטעם, &quot;כי שמתי את כל מעט האגוזים שנשארו בקופסה במקום לשים חופן בלבד, וידעתי שזה לא נכון, ועשיתי את זה&quot;, היא התנצלה, וגם הכינה [[עוגיות|עוגיות חמאה ולימון]] ופאי.
+השבוע התארחנו אצל אווה ופיליפ, והייתה שם עוגה, שאווה התביישה שאטעם, &quot;כי שמתי את כל מעט האגוזים שנשארו בקופסה במקום לשים חופן בלבד, וידעתי שזה לא נכון, ועשיתי את זה&quot;, היא התנצלה, וגם הכינה [[עוגיות|עוגיות חמאה ולימון]] [[ופאי|פאי נקטרין]].
 
 [[העוגה|טורט]] לכשעצמה עם הקנמון והמייפל עדיין היתה טעימה ומתוקה במידה, אך נכון, שעבודת לעיסה רבה הייתה כרוכה באכילתה, והאגוזים השתלטו עליה, ובכל זאת אכלתי ממנה עוד.
 
